sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:16: error: not found: value i
if(plusPetit(i,i+1)){
             ^